--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="Content-Language" content="en" />
-  <link rel="stylesheet" href="css/tachyons.min.css">
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/tachyons.min.css">
+  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/style.css">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
 
   <title>FollowMill: Grow your followers</title>
