--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="black-90">FollowMill</span>
     </div>
     <div class="dtc v-mid tr pa3 ">
-      <a class="f6 hover-white no-underline black-90 dib ml2 pv2 ph3 ba" href="/" >Sign Up</a>
+      <a class="f6 hover-white no-underline black-90 dib ml2 pv2 ph3 ba" href="https://dashboard.followmill.com" >Sign Up</a>
     </div>
   </nav>
 </section>
